k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: newsletter-frontend
  namespace: newsletter
spec:
  type: ClusterIP
  selector:
    app: newsletter-frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
